--- a/Public/index.html
+++ b/Public/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#1a1f3a" />
-    <meta name="description" content="Cybersecurity Dashboard - Monitor your organization's security posture" />
+    <meta name="description" content="Cybersecurity Dashboard" />
     <title>Cybersecurity Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
