--- a/Public/index.html
+++ b/Public/index.html
@@ -7,6 +7,28 @@
     <meta name="description" content="Cybersecurity Dashboard" />
     <title>Cybersecurity Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              'slate': {
+                700: '#334155',
+                800: '#1e293b',
+                900: '#0f172a'
+              }
+            }
+          }
+        }
+      }
+    </script>
+    <style>
+      body {
+        background-color: #1a1f3a;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
